# telegram-sender-cli

./: .pre-commit-config.yaml  CHANGELOG.rst  README.rst  config.toml  pyproject.toml
telegram_sender_cli/: __main__.py  app.py  commands.py  completers.py  config.py  repl.py
telegram_sender_cli/utils/: interaction.py  parse.py  print.py
telegram_sender_cli/wizard/: chat_target.py  proxies.py  session_creds.py  strategies.py  validators.py  wizard.py
